--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -31,7 +31,7 @@
   <div class="marginM">
 
     <div class="wrapper colorBgVW pattern2 shadowBox ">
-      <div class="blankHXXS"></div>
+      <div class="blankHTiny"></div>
       <div class="Grid Grid--gutters Grid--full">
         <div class="Grid-cell">
           <div class="row centerVer">
@@ -39,100 +39,97 @@
               <img src="/icon/LOGO_2.svg" alt="VW Studio Logo V0" class=" logo logo-0">
               <img src="/icon/LOGO_3.svg" alt="VW Studio Logo V1" class=" logo logo-1">
             </div>
-            <h1> <strong class="colorYellowVW700"> VICKY WANG</strong> </h1>
-
-
+            <h1 class="colorYellowVW700 fontWeight700"> Vicky(Yiqi) Wang </h1>
           </div>
         </div>
         <div class="Grid-cell">
-          <h6>&#160; &#160; UX Design | Product Design </h6>
+          <div class="element">
+            <h4>UX Design | Product Design </h4>
+            <h3 class="textItalic fontWeight300 ">Passionate about crafting intuitive, impactful UX for users & businesses</h3>
+
+          </div>
         </div>
-        <h5><strong>Passionate about crafting intuitive, impactful UX for users & businesses </strong></h5>
 
       </div>
-
-
 
       <div class="Grid Grid--gutters Grid--1of3">
 
         <div class="Grid-cell">
           <div class="element">
-            <h3> <strong class="colorYellowVW700"> EDUCATION</strong> </h3>
+            <h3 class="colorYellowVW700 fontWeight700 widthFitContent"> EDUCATION </h3>
 
 
 
-            <h5><strong>University of California, Berkeley </strong></h5>
+            <h5 class="fontWeight500">University of California, Berkeley </h5>
+            <h6 class="fontWeight300">Master of Architecture | <span class="textItalic fontWeight300"> 3-Year Program</span></h6>
             <h6 class="textItalic"> Aug. 2015 - May 2017 | Aug. 2018 - May 2019</h6>
+            <h6> Architecture & Building Science/Technology
+            </h6>
 
-
-            <h6 class="fontWeight400">Master of Architecture</h6>
-
-            <h6>College of Environmental Design, 3-Year Program</h6>
-
-            <h6>Architecture & Building Science/Technology </h6>
             <div class="blankHTiny"></div>
 
-            <h5> <strong>Beijing University of Technology </strong> </h5>
-            <h6 class="textItalic"> September 2009 - July 2013</h6>
+            <h5 class="fontWeight500">Beijing University of Technology </h5>
 
-            <h6 class="fontWeight400">Bachelor of Art</h6>
+            <h6 class="fontWeight300">Bachelor of Art | <span class="textItalic fontWeight300"> 4-Year Program</span></h6>
+            <h6 class="textItalic"> September 2009 - July 2013</h6>
             <h6> Art &amp; Design &amp; Landscape Design </h6>
             <div class="blankHTiny"></div>
 
-            <h5> <strong>Certifications </strong> </h5>
-            <h6 class="fontWeight400">Google UX Design Professional Certificate (2021)</h6>
-            <h6 class="fontWeight400">Codecademy:</h6>
+            <h5 class="fontWeight500">Certifications </h5>
+            <h6 class="fontWeight400 TextPoppins Grey700">Google UX Design Professional Certificate:</h6>
+            <h6>Start the UX Design Process: Empathize, Define, and Ideate <span class="textItalic fontWeight200 TextPoppins Grey700">(Oct. 2021)</span></h6>
+            <h6>Foundations of UX Design <span class="textItalic fontWeight200 TextPoppins Grey700">(Sep. 2021)</span></h6>
+            <div class="blankHTiny"></div>
+
+
+            <h6 class="fontWeight400 TextPoppins Grey700">Codecademy:</h6>
             <h6>User Research (Apr 2023)</h6>
             <h6>Design Thinking (Apr 2023)</h6>
 
             <h6>Interaction Design (May 2023)</h6>
             <h6>JavaScript (Mar 2023)</h6>
 
+            <div class="blankHTiny"></div>
 
-            <h6 class="fontWeight400">Udemy:</h6>
+            <h6 class="fontWeight400 TextPoppins Grey700">Udemy:</h6>
             <h6>Become a Product Manager: Learn the Skills & Get the Job (Dec 2024)</h6>
             <h6>The Complete JavaScript Course: From Zero to Expert! (Jan. 2025)</h6>
           </div>
 
           <div class="element">
 
-            <h3> <strong class="colorYellowVW700"> SKILLS</strong> </h3>
-            <h5> <strong>Design & Research</strong> </h5>
+            <h3 class="colorYellowVW700 fontWeight700 widthFitContent"> SKILLS</h3>
+
+            <h5 class="fontWeight500">Design & Research </h5>
             <h6>UX Design, Usability Testing, User Research, Wireframing, Prototyping</h6>
             <h6>Design Systems, Responsive Design, Interaction Design, Visual Design</h6>
             <div class="blankHTiny"></div>
 
 
-            <h5> <strong>Software</strong> </h5>
+            <h5 class="fontWeight500">Software</h5>
             <h6>Figma, Adobe XD, Sketch, Adobe Creative Suite</h6>
             <div class="blankHTiny"></div>
 
-            <h5> <strong>Technical Skills</strong> </h5>
+            <h5 class="fontWeight500">Technical Skills </h5>
             <h6>HTML, CSS, JavaScript, JQuery</h6>
             <h6>Rhino, AutoCAD, 3D Max, Unity</h6>
+            <div class="blankHTiny"></div>
+
+            <div class="notDisplayMobile">
+              <h5 class="fontWeight500">Architectural Design </h5>
+              <h6>Buro OS | Architectural Designer <span class="textItalic fontWeight200 TextPoppins Grey700">(2017-2018)</span></h6>
+
+              <h6>In Design Studio | Summer Intern  <span class="textItalic fontWeight200 TextPoppins Grey700">(2017)</span></h6>
+
+
+              <h6>PDI Design Group | Architectural Designer <span class="textItalic fontWeight200 TextPoppins Grey700">(2013-2015)</span> </h6>
+
+              <h6>Do Union | Designer <span class="textItalic fontWeight200 TextPoppins Grey700">(2010 - 2012)</span></h6>
+            </div>
+
 
           </div>
 
-
-          <div class="element notDisplayMobile">
-
-            <h3> <strong class="colorYellowVW700"> ARCHITECTURAL DESIGN </strong> </h3>
-            <h6><strong>Buro OS | Architectural Designer </strong></h6>
-            <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
-            <div class="blankHTiny"></div>
-
-            <h6><strong>In Design Studio | Summer Intern </strong></h6>
-            <h6 class="textItalic">May. 2017 - Aug.2017</h6>
-            <div class="blankHTiny"></div>
-
-
-            <h6><strong>PDI Design Group | Architectural Designer </strong></h6>
-            <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
-            <div class="blankHTiny"></div>
-
-            <h6><strong>Do Union | Designer </strong></h6>
-            <h6 class="textItalic">Jul. 2010 - May.2012</h6>
-          </div>
 
 
 
@@ -142,7 +139,7 @@
 
         <div class="Grid-cell">
           <div class="element">
-            <h3><strong class="colorYellowVW700"> EXPERIENCE</strong></h3>
+            <h3 class="colorYellowVW700 fontWeight700 widthFitContent"> EXPERIENCE</h3>
 
 
             <h4><strong>BabyQuip | Senior User Experience Designer </strong></h4>
@@ -150,7 +147,7 @@
 
 
             <ul class="listCircle">
-              <li class="listLoose">Led the transition from a provider-first to a gear-first mobile experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.              </li>
+              <li class="listLoose">Led the transition from a provider-first to a gear-first mobile experience, enhancing discoverability, mobile usability, and increasing average order value by 12%. </li>
               <li class="listLoose">Redesigned the BabyQuip mobile app to streamline booking, checkout, and navigation—reducing drop-offs and improving retention.
 
               </li>
