--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -21,47 +21,47 @@
     headerBackgroundColor:'colorBgVW'
     }) %>
 
-<div class="blankHS"></div>
-<div class="wrapper">
-  <div class="Grid Grid--full Grid--gutter">
-    <div class="Grid-cell">
-      <div class="element displayLaptop u-textCenter">
-        <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-        <div class="blankHTiny"></div>
-
-        <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
- 
-        <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
-        <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
-      </div>
-      <div class="element displayTablet  u-textCenter">
-        <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
-        <div class="blankHTiny"></div>
-
-        <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
- 
-        <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
-        <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
-      </div>
-      <div class="element displayPhone">
-        <div class="element">
-          <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
+  <div class="blankHS"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--full Grid--gutter">
+      <div class="Grid-cell">
+        <div class="element displayLaptop u-textCenter">
+          <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
-          <h1 class="specialTextTitle fontWeight700">that are </h1>
+          <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
 
-          <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> smooth, </h1>
-
-          <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> intuitive, </h1>
-
-          <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> impactful</h1>
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+        </div>
+        <div class="element displayTablet  u-textCenter">
+          <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
+          <div class="blankHTiny"></div>
+
+          <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
+
+          <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+        </div>
+        <div class="element displayPhone">
+          <div class="element">
+            <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
+            <div class="blankHTiny"></div>
+
+            <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
+            <h1 class="specialTextTitle fontWeight700">that are </h1>
+
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> smooth, </h1>
+
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> intuitive, </h1>
+
+            <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> impactful</h1>
+            <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
   <div class="blankHXXS"></div>
@@ -177,81 +177,9 @@
       }) %>
       <!-- Arrow -->
 
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Marketplace, Partner </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="blankHXS"></div>
-        <div class="Grid Grid--holly-grail Grid--center">
-          <div class="Grid-cell main">
-            <div class="element">
-
-              <div class="paddingXL borderRadiusL gradient_background2">
-                <a href="/byp_b2b_subscription/">
-                  <img src="/projectImages/babyquip_inventorymanagement.png" alt="Business Booking Experience"></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid-cell aside aside-1">
-
-            <div class="element">
-              <%- include(`${templatePath}/shared/base_chip`, {
-                chipSmallTxt: '1-2 Feature Enhancement',
-                  colorBg: 'colorBg_VW_Pink200',
-                colorTxt: 'color_VW_Pink800'
-              }) %>
-              <div class="blankHTiny"></div>
-              <h1 class="specialTextS fontWeight700">Business-Facing Inventory Management
 
 
-              </h1>
-              <div class="blankHTiny"></div>
-              <div class="blankHTiny"></div>
 
-              <ul class="listCircle">
-                <li> <span class="TextPoppins fontWeight500">Comprehensive Inventory Control:</span> Enabled business users (Quality Providers) to efficiently manage their gear—edit, organize, list/unlist, and remove items.
-                </li>
-                <li> <span class="TextPoppins fontWeight500">Better Category Visibility:</span> Improved the system to show unlisted categories, encouraging a wider range of inventory and helping BabyQuip grow its offerings.
-                </li>
-                <li> <span class="TextPoppins fontWeight500">Streamlined Organization:</span> Addressed usability challenges where users struggled to manage and categorize their inventory effectively.
-                </li>
-                <li> <span class="TextPoppins fontWeight500">Business Growth Insights:</span> Helped users understand how their inventory impacts their BabyQuip landing page, improving visibility and rental success.
-                </li>
-              </ul>
-
-            </div>
-            <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
-                </button></a>
-            </div>
-          </div>
-
-        </div>
-
-
-      </div>
-
-
-      <div class="blankHXS"></div>
-
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Business Scheduling, Onboarding, Subscription </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="blankHS"></div>
 
       <div class="wrapper">
 
@@ -298,7 +226,11 @@
             </div>
           </div>
         </div>
-        <div class="blankHS"></div>
+      </div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
+      <div class="wrapper">
+
+
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -348,20 +280,11 @@
           </div>
 
         </div>
+      </div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
 
 
-        <div class="blankHS"></div>
-        <hr class="wrapperM">
-        <div class="blankHS"></div>
-        <div class="wrapper">
-          <div class="Grid Grid--full Grid--gutters u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1 class="TextPoppins fontWeight100 Grey800"> Mobile Consumer-Facing Booking Experience </h1>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="wrapper">
 
         <div class="blankHXXS"></div>
         <div class="Grid Grid--holly-grail Grid--center">
@@ -413,20 +336,11 @@
         </div>
 
       </div>
-      <div class="blankHS"></div>
-      <hr class="wrapperM">
-      <div class="blankHS"></div>
 
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Simplify SaaS Booking App </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXXS"></div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
+
+
+
       <div class="wrapper">
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
@@ -472,22 +386,10 @@
 
         </div>
       </div>
-      <div class="blankHS"></div>
-      <hr class="wrapperM">
-      <div class="blankHS"></div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
 
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Consumer-Facing Medication Purchase Experience
 
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXXS"></div>
+
       <div class="wrapper">
 
         <div class="Grid Grid--holly-grail Grid--center">
@@ -532,7 +434,11 @@
             </div>
           </div>
         </div>
-        <div class="blankHS"></div>
+      </div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
+
+      <div class="wrapper">
+
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -581,20 +487,10 @@
         </div>
 
       </div>
-      <div class="blankHS"></div>
-      <hr class="wrapperM">
-      <div class="blankHS"></div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
 
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Healthcare Admin Panel Design </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXXS"></div>
+
+
       <div class="wrapper">
 
         <div class="Grid Grid--holly-grail Grid--center">
@@ -644,8 +540,7 @@
 
         </div>
       </div>
-
-      <div class="blankHS"></div>
+      <%- include(`${templatePath}/shared/base_divider`) %>
 
 
     </div>
@@ -654,7 +549,6 @@
     <!-- Arrow -->
     <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Experiments' }) %>
     <!-- Arrow -->
-    <div class="blankHXXS"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -670,13 +564,13 @@
                 colorTxt: 'color_VW_Pink800'
               }) %>
               <h3 class="TextPoppins fontWeight500">Glorify App</h3>
-              <h3 class="colorLandingText fontWeight700"> For Christian daily worship
+  
+              <h3 class="textItalic fontWeight300 Grey700"> For Christian daily worship</h3>
 
-              </h3>
               <ul class="listCircle">
-                <li> <span class="TextPoppins fontWeight500">Initiate Community:</span> Transform from a single-player to a multiplayer experience.
+                <li> <span class="TextPoppins fontWeight400">Initiate Community:</span> Transform from a single-player to a multiplayer experience.
                 </li>
-                <li> <span class="TextPoppins fontWeight500">Drive Growth:</span> Foster engagement and expand user participation within the community.
+                <li> <span class="TextPoppins fontWeight400">Drive Growth:</span> Foster engagement and expand user participation within the community.
 
                 </li>
               </ul>
@@ -694,11 +588,10 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <h3 class="arrCard"><strong>Marketing Insights Dashboard</strong></h3>
+              <h3 class="TextPoppins fontWeight500">Marketing Insights Dashboard</h3>
 
-              <h3 class="colorLandingText fontWeight700"> For Brand marketers
+              <h3 class="textItalic fontWeight300 Grey700"> For Brand marketers</h3>
 
-              </h3>
               <ul class="listCircle">
                 <li> <span class="TextPoppins fontWeight400">Transform Insights:</span> Turn Reddit data into actionable insights for brand marketers.
                 </li>
@@ -724,10 +617,9 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <h3 class="arrCard"><strong>Interview Scheduling</strong></h3>
-              <h3 class="colorLandingText fontWeight700"> For Recuriter & hiring managers
+              <h3 class="TextPoppins fontWeight500">Interview Scheduling</h3>
+              <h3 class="textItalic fontWeight300 Grey700"> For Recuriter & hiring managers</h3>
 
-              </h3>
               <ul class="listCircle">
                 <li> <span class="TextPoppins fontWeight400">Streamline Scheduling:</span> Revamp the interview scheduling process to enhance efficiency.
                 </li>
@@ -844,7 +736,7 @@
         </div>
       </div>
     </div>
-    <div class="blankHXS"></div>
+    <div class="blankHTiny"></div>
 
 
     <div class="wrapper">
@@ -1006,8 +898,8 @@
     <!-- Arrow -->
     <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Timeline' }) %>
     <!-- Arrow -->
-   <!-- import timeline -->
-   <%- include(`${templatePath}/shared/block_timeline`) %>
+    <!-- import timeline -->
+    <%- include(`${templatePath}/shared/block_timeline`) %>
 
 
     <!-- Arrow -->
