--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -1,45 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>A Closer Look at Functions</title>
-    <style>
-      body {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
-      }
-      h1 {
-        font-family: sans-serif;
-        font-size: 50px;
-        line-height: 1.3;
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-        color: white;
-      }
-      .buy,
-      .poll {
-        font-size: 1.6rem;
-        padding: 1rem 2rem;
-        position: absolute;
-        top: 2rem;
-      }
-      .buy {
-        left: 2rem;
-      }
-      .poll {
-        right: 2rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>A Closer Look at Functions</h1>
-    <button class="buy">Buy new plane 🛩</button>
-    <button class="poll">Answer poll ⁉️</button>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>JavaScript Learning</title>
+  <link rel="stylesheet" href="main.css" />
+    <!-- Include Prism.js CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/themes/prism.min.css" rel="stylesheet">
+    <!-- Google Font Preconnect-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Font Preconnect-->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <!--sitewide font-family: 'Lato', sans-serif; -->
+</head>
+
+<body class="wrapper">
+  <br>
+
+  <header>
+    <h1>JavaScript Learning</h1>
+  </header>
+  <hr>
+  <br>
+  <br>
+  <br>
+  <br>
+  <main>
+    <h1>Projects</h1>
+    <a href="project_guess_number">
+      <h3 class="textUnderline">Guess My Number!</h3>
+    </a>
+    <a href="project_modal">
+      <h3 class="textUnderline">Modal</h3>
+    </a>
+    <a href="project_pig_game">
+      <h3 class="textUnderline">Pig Game</h3>
+    </a>
+    <a href="project_filterable_list">
+      <h3 class="textUnderline">A filterable employee list</h3>
+    </a>
+    <a href="project_todo_list">
+      <h3 class="textUnderline"> Simple To-Do List </h3>
+    </a>
+    <hr>
+    <br>
+    <br>
+
+    <h1>Exercise</h1>
+
+    <a href="exercise_behind_the_scenes">
+      <h3 class="textUnderline">Behind the scenes</h3>
+    </a>
+    <a href="exercise_data_structure_operators">
+      <h3 class="textUnderline">Data Structure operators</h3>
+    </a>
+
+    <h1>Sections</h1>
+
+    <a href="section_chatGPT/">
+      <h3 class="textUnderline">Practice with ChatGPT</h3>
+    </a>
+    <a href="section_two">
+      <h3 class="textUnderline">Section 2</h3>
+    </a>
+    <a href="section_nine">
+      <h3 class="textUnderline">Section 9</h3>
+    </a>
+
+    <a href="section_ten">
+      <h3 class="textUnderline">Section 10</h3>
+    </a>
+
+  </main>
+
+  <script src="script.js"></script>
+  <!-- Include Prism.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/prism.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-javascript.min.js"></script>
+
+</body>
+
+
+
+
+
 </html>
