--- a/templates/javascript-learning/section_chatGPT/index.html
+++ b/templates/javascript-learning/section_chatGPT/index.html
@@ -6,29 +6,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Practice with ChatGPT</title>
-
 </head>
 
 <body class="wrapper">
   <div>
-
     <div>
       <h1>Practice with ChatGPT</h1>
     </div>
-  
-  
-    <div>
-      <h1 id="main-title">Welcome</h1>
-      <button id="change-btn"><h2>Click Me</h2> </button>
-    </div>
+
+
+
+
   </div>
+  <hr>
+  <!-- lesson 1-->
+
+  <div>
+    <h1 id="main-title">Lesson 1</h1>
+    <button id="change-btn">
+      <h2>Click Me</h2>
+    </button>
+  </div>
+  <hr>
+
+  <!-- lesson 2-->
+
+  <h1 id="main-title-l2">Lesson 2</h1>
+  <button id="toggle-btn-l2">Toggle Style</button>
+  <hr>
+
+  <!-- lesson 3-->
+  <h1 id="multi-title">Lesson 3</h1>
+  <button id="multi-btn">Toggle Style</button>
+
+  <hr>
+
+  <!-- lesson 4-->
+  <h1 id="multi-title-l4">Lesson 4</h1>
+  <button id="multi-btn-l4">Toggle Style</button>
+  <hr>
+  <!-- lesson 5-->
+
+  <h1 id="multi-title-l5">Lesson 5</h1>
+  <button id="multi-btn-l5">Toggle Style</button>
+  <hr>
+
+  <!-- lesson 6-->
 
 
+  <h1 id="multi-title-l6">Lesson 6</h1>
+  <button id="multi-btn-l6">Enlarge</button>
+
+  <!-- lesson 7-->
 
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
-
 </body>
 
 </html>
