--- a/templates/javascript-learning/section_chatGPT/style.css
+++ b/templates/javascript-learning/section_chatGPT/style.css
@@ -1,3 +1,24 @@
+:root{
+    --Grey900: #1b1b1b;
+    /*292929 2c2c2c #161616*/
+  
+    --Grey800: #2f2f2f;
+    /* 5f6368 4f4f4f*/
+    --Grey700: #707070;
+    /* #505050 83878a 787878  757575*/
+    --Grey600: #a5a5a5;
+    /* #909090, 999D9F, 8e8787 a7a7a7*/
+    --Grey500: #cacaca;
+    /* #c8c8c8 e0e0e0*/
+    --Grey400: #e6e6e6;
+    /* e4e4e4; e6e6e6*/
+    --Grey300: #efefef;
+    /* efefef, f2f2f2*/
+    --Grey200: #f2f2f2;
+    /* F8F8F8, f2f2f2*/
+    --Grey100: #fafafa;
+  
+}
 * {
     border-style: none;
   }
@@ -39,10 +60,57 @@
     max-width: 1320px;
     margin: auto;
   }
+  .highlight {
+    color: white;
+    background-color: black;
+    padding: 10px;
+    border-radius: 8px;
+  }
 
+  .colorChange {
+    color: hotpink;
+  }
+  .bigText {
+    font-size: 3rem;
+  }
 
+  .colorChange-l4 {
+    color: hotpink;
+  }
+  .bigText-l4 {
+    font-size: 3rem;
+  }
 
+  .colorChange-l5 {
+    color: hotpink;
+  }
+  .bigText-l5 {
+    font-size: 3rem;
+  }
+  .bigText-l6 {
+    font-size: 3rem;
+  }
   
+
+  hr {
+    border: none;
+    height: 32px;
+    border-bottom: 1px solid var(--Grey400);
+    width: 100%;
+  }
+button{
+    font-size: 16px;
+    padding: 16px 26px;
+    font-weight: 400;
+    border-radius: 32px;
+    margin: 12px 0;
+
+
+}
+
+
+
+
 h1,
 h2 {
   font-weight: 400;
